Removing overflow scroll from main. It actually breaks scrolling more than fixes

--- a/src/nativeflavors/theme/theme/scss/app.scss
+++ b/src/nativeflavors/theme/theme/scss/app.scss
@@ -421,7 +421,7 @@ p {
 
 #main {
 	@media #{$small-only, $medium-only} {
-		overflow: auto;
+		//overflow: auto;
 	}
 }
 
